tests/this_ctor/this_ctor.exp
Error ---------------------------------------------------------------------------------------------------- test.js:13:12

Cannot return `new this.constructor(...)` because `A` [1] is incompatible with number [2]. [incompatible-return]

   test.js:13:12
   13|     return new this.constructor(this.n); // Error A ~> number
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   test.js:12:15
   12|   badClone(): number {
                     ^^^^^^ [2]



Found 1 error
